[package]
name = "soroban-asteroids-wrangler"
version = "0.0.0"
license-file = "LICENSE"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
serde_json = "1.0.67"
serde = "1.0.152"
serde_yaml = "0.9.17"
jwt-compact = "0.6.0"
time = "0.1.45"
erased-serde = "0.3.24"
chrono = "0.4.23"
base64 = "0.21.0"
worker = "0.0.13"

ed25519-dalek = "1.0.1"
wasmparser = "0.90.0"
hex = "0.4.3"
sha2 = "0.10.6"
thiserror = "1.0.31"

soroban-env-host = "0.0.14"
soroban-spec = "0.6.0"
soroban-ledger-snapshot = "0.6.0"
stellar-strkey = "0.0.7"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }