[package]
name = "soroflare-vm"
version.workspace = true
edition = "2021"
publish = false


[dependencies.soroban-env-host]
path = "../../rs-soroban-env/soroban-env-host"

[dependencies.soroban-spec]
path = "../../rs-soroban-sdk/soroban-spec"

[dependencies.soroban-ledger-snapshot]
path = "../../rs-soroban-sdk/soroban-ledger-snapshot"

[dependencies.soroban-spec-tools]
path = "../../soroban-tools/cmd/crates/soroban-spec-tools"

[dependencies]
base64 = "0.21.2"
stellar-strkey = "0.0.7"
ed25519-dalek = "2.0.0"
hex = "0.4.3"
sha2 = "0.10.7"
thiserror = "1.0.31"
itertools = "0.10.5"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.82"
ethnum = "1.3.2"
rand = "0.8.5"
worker = "0.0.17" # keeping this for now just to log to cloudflare workers.

