[package]
name = "soroflare-vm"
version.workspace = true
edition = "2021"
publish = false

[dependencies.soroban-env-host]
git = "https://github.com/heytdep/rs-soroban-env/"
rev = "917fa35e7a6b0b8c60aeb4ebc995793c38fcd04e"
#path = "/mnt/storagehdd/sdf-work/rs-soroban-env/soroban-env-host"
features = ["testutils", "recording_mode", "unstable-next-api"]

[dependencies.soroban-simulation]
git = "https://github.com/heytdep/rs-soroban-env/"
rev = "917fa35e7a6b0b8c60aeb4ebc995793c38fcd04e"
#path = "/mnt/storagehdd/sdf-work/rs-soroban-env/soroban-simulation"

[dependencies.soroban-spec]
version = "20.2.0"

#[dependencies.soroban-ledger-snapshot]
#version = "20.2.0"

[dependencies.soroban-spec-tools]
version = "20.2.0"

[dependencies]
base64 = "0.21.2"
stellar-strkey = "0.0.7"
ed25519-dalek = "2.0.0"
hex = "0.4.3"
sha2 = "0.10.7"
thiserror = "1.0.31"
itertools = "0.10.5"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.82"
ethnum = "1.3.2"
rand = "0.8.5"
worker = "0.0.17" # keeping this for now just to log to cloudflare workers.

