[package]
name = "soroflare-wrangler"
version.workspace = true
license-file = "LICENSE"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
serde_json = "1.0.67"
serde = "1.0.152"
serde_yaml = "0.9.17"
jwt-compact = "0.6.0"
time = "0.1.45"
erased-serde = "0.3.24"
chrono = "0.4.23"
base64 = "0.21.0"
worker = "0.0.13"


soroban-env-host = {version = "0.0.16", features = ["vm", "serde", "hostfn_log_fmt_values"] }
soroflare-vm = { path = "../soroflare-vm" }



# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }