[package]
name = "soroflare-wrangler"
version.workspace = true
license-file = "LICENSE"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies.soroban-env-host]
git = "https://github.com/heytdep/rs-soroban-env/"
rev = "894e4209508c9fdaa128451053f83aa3feaea90c"
#path = "/mnt/storagehdd/sdf-work/rs-soroban-env/soroban-env-host"
features = ["testutils", "recording_mode", "unstable-next-api"]

[dependencies.soroban-simulation]
git = "https://github.com/heytdep/rs-soroban-env/"
rev = "894e4209508c9fdaa128451053f83aa3feaea90c"
#path = "/mnt/storagehdd/sdf-work/rs-soroban-env/soroban-simulation"

[dependencies]
cfg-if = "0.1.2"
serde_json = "1.0.67"
serde = "1.0.152"
serde_yaml = "0.9.17"
jwt-compact = "0.6.0"
time = "0.1.45"
erased-serde = "0.3.24"
chrono = "0.4.42"
base64 = "0.21.0"
worker = "0.0.17"
sha2 = "0.10.8"
#soroflare-vm = { path = "../soroflare-vm" }
core = { path = "../core" }
hex = "0.4.3"
stellar-strkey = "0.0.8"


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }